"A Jar: add a jar"